CASMCMS-7175: Add controllers for components and options endpoints
